tambahan efect jquery

--- a/effect_jquery/index.html
+++ b/effect_jquery/index.html
@@ -9,6 +9,37 @@
 </head>
 <body>
     <button id="hide">Hide</button>
-    <div id="kotak" style="width: 200px; height: 200px; background-color: skyblue;"></div>
+    <button id="show">Show</button>
+    <div id="kotak" style="width: 200px; height: 200px; background-color: skyblue;"></div> <br><br>
+
+    <button id="fadeout">FadeOut</button>
+    <button id="fadein">FadeIn</button>
+    <button id="fadetoggle">Fade Toggle</button>
+    <button id="fadeto">FadeTo</button>
+    <br><br>
+    <div class="box1" style="width: 50px; height: 50px; background-color: aquamarine;"></div> <br>
+    <div class="box2" style="width: 50px; height: 50px; background-color: cadetblue;"></div> <br>
+    <div class="box3" style="width: 50px; height: 50px; background-color: cyan;"></div> <br><br>
+
+    <button id="slideup">SlideUp</button> 
+    <button id="slidedown">SlideDown</button>
+    <button id="slidetoggle">SlideToggle</button>
+    <br><br>
+    <div id="slide" style="background-color: coral; width: 50px; height: 50px;"></div> <br><br>
+
+    <!-- efek animate -->
+    <button id="kiri">&laquo;</button>
+    <button id="kanan">&raquo;</button> <br>
+    <div id="animate-box" style="background-color: #abc; margin: auto; width: 100px; height: 100px; position: absolute;"></div>
+
+    <!-- efek clearqueue -->
+    <button id="start" style="margin-top: 120px;">Start</button>
+    <button id="stop" style="margin-top: 120px;">Stop</button><br>
+    <div class="clearqueue-box" style="position: absolute; background-color: chartreuse; margin: auto; width: 100px; height: 100px;"></div> <br><br>
+
+    <!-- efek delay -->
+     <button id="delay" style="margin-top: 120px;">Run</button>
+     <div id="kotak-satu" style="position: absolute; background-color: khaki; margin-top: auto; height: 100px; width: 100px; float: left;">Kotak Satu</div>
+     <div id="kotak-dua" style="position: absolute; background-color: gold; margin-top: auto; height: 100px; width: 100px; float: left; left: 120px;">Kotak Dua</div>
 </body>
 </html>
