tambahan proses edit dan delete

--- a/crud_jquery/index.html
+++ b/crud_jquery/index.html
@@ -16,6 +16,7 @@
                 <td>Nama Barang</td>
                 <td>Harga Barang</td>
                 <td>Stok</td>
+                <td>Aksi</td>
             </tr>
         </thead>
         <tbody class="targetData">
@@ -24,6 +25,7 @@
     </table>
     <br><hr><br>
     <table>
+        <tr><td>ID Barang</td><td><input type="text" class="txt_id" disabled></td></tr>
         <tr><td>Nama Barang</td><td><input type="text" class="txt_nama_barang"></td></tr>
         <tr><td>Harga Barang</td><td><input type="number" class="txt_harga_barang"></td></tr>
         <tr><td>Stok</td><td><input type="number" class="txt_stok"></td></tr>
